# flutter_scapix_example

./: .gitignore  CMakeLists.txt  README.md  runcmake.cmd
android/app/: build.gradle
android/app/src/main/java/com/example/flutter_example/: MainActivity.java
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
native_libs/person/: person.cpp  person.hpp
